restrict-dhi-validatingpolicy.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-image-repo
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: allContainers
      expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
    - name: allowedRepo
      expression: "'dhi.io'"
  validations:
    - message: "All container images must originate from the authorized repository 'dhi.io'."
      expression: |
        variables.allContainers.all(container,
          (container.image.contains('/') 
            ? container.image.split('/')[0] + '/' + container.image.split('/')[1].split(':')[0]
            : container.image.split(':')[0]
          ) == variables.allowedRepo
        )
